--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -20,22 +20,41 @@
           <p>
             Get updated to our exciting promotions, limited offers, articles and resources.
           </p>
-          <form class="db-form--newsletter db-form"
+          <form class="db-form--newsletter db-form validate"
+            id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form"
             method="post"
-            action="/contact#contact_form"
-            accept-charset="UTF-8">
+            action="https://elevate-m.us21.list-manage.com/subscribe/post?u=c9161b1e17a490930cf29bfcd&amp;id=b779bd68b4&amp;f_id=00fbdce6f0"
+            accept-charset="UTF-8"
+            target="_blank">
             <div class="db-form-wrap">
               <div class="db-form-group">
-                <input class="db-form-input"
+                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                  /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                  <input type="text" name="b_c9161b1e17a490930cf29bfcd_b779bd68b4" tabindex="-1" value="">
+                </div>
+              </div>
+              <div class="db-form-group">
+                <input class="db-form-input required email"
+                  id="mce-EMAIL"
                   type="email"
+                  name="EMAIL"
                   placeholder=""
+                  required=""
+                  value=""
                   autocorrect="off"
                   autocapitalize="off">
                 <button class="db-btn--form-submit db-btn"
-                  type="button">
+                  id="mc-embedded-subscribe"
+                  type="submit"
+                  name="subscribe">
                   SUBSCRIBE
                 </button>
               </div>
+            </div>
+            <div id="mce-responses" class="clear foot">
+              <div class="response" id="mce-error-response" style="display: none;"></div>
+              <div class="response" id="mce-success-response" style="display: none;"></div>
             </div>
           </form>
         </div>
@@ -111,3 +130,7 @@
     </div>
   </section>
 </footer>
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+<script type="text/javascript">
+  (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);
+</script>
