--- a/styles/db-theme/_footer.scss
+++ b/styles/db-theme/_footer.scss
@@ -1,3 +1,6 @@
+/*============*/
+/*   FOOTER   */
+/*============*/
 .db-footer {
   background-color: #0B070F;
   padding: 45px 0 0;
@@ -102,91 +105,116 @@
             }
 
             .db-form--newsletter {
+              max-width: 500px;
               width: 100%;
+
+              @media only screen and (max-width: 1080px) {
+                margin: 0 auto;
+              }
+
+              @media only screen and (max-width: 768px) {
+                min-width: unset;
+                margin: 0 auto 16px;
+              }
 
               .db-form-wrap {
                 width: 100%;
 
                 .db-form-group {
                   position: relative;
-                  max-width: 500px;
-                  min-width: 500px;
                   width: 100%;
-                  height: 60px;
-
-                  @media only screen and (max-width: 1080px) {
-                    margin: 0 auto;
+                  &:nth-of-type(1) {
+                    display: none;
                   }
 
-                  @media only screen and (max-width: 768px) {
-                    min-width: unset;
-                    margin: 0 auto 16px;
-                  }
-
-                  @media only screen and (max-width: 480px) {
-                    height: auto;
-                  }
-
-                  .db-form-input {
-                    color: $whiteColor;
-                    font-family: $primaryFontFamily;
-                    font-size: 16px;
-                    font-weight: 600;
-
-                    display: block;
-                    background-color: #0E0914;
-                    width: 100%;
-                    height: 100%;
-                    padding: 20px 190px 20px 25px;
-                    border: 1px solid $primaryColor;
-                    border-radius: 60px;
+                  &:nth-of-type(2) {
+                    height: 60px;
 
                     @media only screen and (max-width: 480px) {
-                      height: 37px;
-                      margin: 0 auto 8px;
-                    }
-                  }
-
-                  .db-btn--form-submit {
-                    color: $secondaryColor;
-                    font-family: $tertiaryFontFamily;
-                    font-size: 16px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: 1.25em;
-                    letter-spacing: -0.64px;
-                    position: absolute;
-                    top: 5px;
-                    right: 5px;
-                    display: block;
-                    background-color: transparent;
-                    max-width: 165px;
-                    min-width: 165px;
-                    width: 100%;
-                    height: calc(100% - (5px * 2));
-                    padding: 5px;
-                    border: 1px solid $secondaryColor;
-                    border-radius: 50px;
-
-                    @media only screen and (max-width: 480px) {
-                      color: $whiteColor;
-                      font-size: 14px;
-                      position: static;
-                      background-color: $secondaryColor;
-                      max-width: 100%;
                       height: auto;
-                      padding: 12px;
                     }
 
-                    &:hover {
+                    .db-form-input {
                       color: $whiteColor;
-                      background-color: $secondaryColor;
+                      font-family: $primaryFontFamily;
+                      font-size: 16px;
+                      font-weight: 600;
+
+                      display: block;
+                      background-color: #0E0914;
+                      width: 100%;
+                      height: 100%;
+                      padding: 20px 190px 20px 25px;
+                      border: 1px solid $primaryColor;
+                      border-radius: 60px;
 
                       @media only screen and (max-width: 480px) {
-                        background-color: #75A10A;
+                        height: 37px;
+                        margin: 0 auto 8px;
+                      }
+                    }
+
+                    .db-btn--form-submit {
+                      color: $secondaryColor;
+                      font-family: $tertiaryFontFamily;
+                      font-size: 16px;
+                      font-style: normal;
+                      font-weight: 700;
+                      line-height: 1.25em;
+                      letter-spacing: -0.64px;
+                      position: absolute;
+                      top: 5px;
+                      right: 5px;
+                      display: block;
+                      background-color: transparent;
+                      max-width: 165px;
+                      min-width: 165px;
+                      width: 100%;
+                      height: calc(100% - (5px * 2));
+                      padding: 5px;
+                      border: 1px solid $secondaryColor;
+                      border-radius: 50px;
+
+                      @media only screen and (max-width: 480px) {
+                        color: $whiteColor;
+                        font-size: 14px;
+                        position: static;
+                        background-color: $secondaryColor;
+                        max-width: 100%;
+                        height: auto;
+                        padding: 12px;
+                      }
+
+                      &:hover {
+                        color: $whiteColor;
+                        background-color: $secondaryColor;
+
+                        @media only screen and (max-width: 480px) {
+                          background-color: #75A10A;
+                        }
                       }
                     }
                   }
+                }
+              }
+
+              #mce-responses {
+                #mce-error-response,
+                #mce-success-response {
+                  font-family: $primaryFontFamily;
+                  font-size: 15px;
+                  font-weight: 600;
+                  text-align: center;
+                  line-height: 1.25em;
+                  padding: 10px 0;
+                }
+
+                #mce-error-response {
+                  color: #FF2020;
+                }
+
+                #mce-success-response {
+                  color: $secondaryColor;
                 }
               }
             }
