--- a/styles/db-theme/_page--about-us.scss
+++ b/styles/db-theme/_page--about-us.scss
@@ -93,7 +93,7 @@
     .db-row {
 
       &:nth-child(2) {
-        background-image: url('About-Us__asset-banner.png');
+        background-image: url('About-Us__asset-banner.jpg');
         background-position: left;
         background-repeat: no-repeat;
         background-size: cover;
