refractor: about us page templating using section; add newsletter subscription on about us page newsletter integration with mailchimp;

--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -30,8 +30,8 @@
           </div>
         </button>
         <a class="db-site-link"
-          title=""
-          href="">
+          title="Deadbeat"
+          href="{{ shop.url }}">
           <img class="db-site-logo db-img"
             alt="Deadbeat"
             title="Deadbeat"
