--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,136 +1,120 @@
-<footer class="db-footer site-footer">
-  <section class="db-section db-section--newsletter">
-    <div class="db-container">
-      <div class="db-row">
-        <div class="db-col">
-          <a class="db-site-link"
-            title="Deadbeat"
-            href="{{ shop.url }}">
-            <img class="db-site-logo db-img"
-              alt="Deadbeat"
+{% comment %}
+  hide on index/home page
+{% endcomment %}
+{% if template != 'index' %}
+
+  <footer class="db-footer site-footer">
+    <section class="db-section db-section--newsletter">
+      <div class="db-container">
+        <div class="db-row">
+          <div class="db-col">
+            <a class="db-site-link"
               title="Deadbeat"
-              src="{{ 'DB_Main_logo-v01-264x96.png' | asset_url }}"
-              width=""
-              height=""
-              loading="lazy">
-          </a>
-          <h4>
-            Subscribe to our newsletter
-          </h4>
-          <p>
-            Get updated to our exciting promotions, limited offers, articles and resources.
-          </p>
-          <form class="db-form--newsletter db-form validate"
-            id="mc-embedded-subscribe-form"
-            name="mc-embedded-subscribe-form"
-            method="post"
-            action="https://elevate-m.us21.list-manage.com/subscribe/post?u=c9161b1e17a490930cf29bfcd&amp;id=b779bd68b4&amp;f_id=00fbdce6f0"
-            accept-charset="UTF-8"
-            target="_blank">
-            <div class="db-form-wrap">
-              <div class="db-form-group">
-                <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                  /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
-                  <input type="text" name="b_c9161b1e17a490930cf29bfcd_b779bd68b4" tabindex="-1" value="">
-                </div>
-              </div>
-              <div class="db-form-group">
-                <input class="db-form-input required email"
-                  id="mce-EMAIL"
-                  type="email"
-                  name="EMAIL"
-                  placeholder=""
-                  required=""
-                  value=""
-                  autocorrect="off"
-                  autocapitalize="off">
-                <button class="db-btn--form-submit db-btn"
-                  id="mc-embedded-subscribe"
-                  type="submit"
-                  name="subscribe">
-                  SUBSCRIBE
-                </button>
-              </div>
-            </div>
-            <div id="mce-responses" class="clear foot">
-              <div class="response" id="mce-error-response" style="display: none;"></div>
-              <div class="response" id="mce-success-response" style="display: none;"></div>
-            </div>
-          </form>
-        </div>
-        <div class="db-col">
-          <img class="db-img-figure01 db-img"
-            alt=""
-            title=""
-            src="{{ 'DB_Footer_NewsletterFigure01_v01-809x512.png' | asset_url }}"
-            width=""
-            height=""
-            loading="lazy">
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="db-section db-section--primary">
-    <div class="db-container">
-      <div class="db-row">
-        <div class="db-col">
-          <div class="db-inner-row">
-            <a class="db-elevate-link"
-              title=""
-              href="">
-              <img class="db-elevate-logo db-img"
-                alt=""
-                title=""
-                src="{{ 'DB_Elevate_logo-v01-72x81.png' | asset_url }}"
+              href="{{ shop.url }}">
+              <img class="db-site-logo db-img"
+                alt="Deadbeat"
+                title="Deadbeat"
+                src="{{ 'DB_Main_logo-v01-264x96.png' | asset_url }}"
                 width=""
                 height=""
                 loading="lazy">
             </a>
+            <h4>
+              Subscribe to our newsletter
+            </h4>
             <p>
-              We are a Web3 brand focused on creating the story world and building the story canon with us… ON AIR!.
+              Get updated to our exciting promotions, limited offers, articles and resources.
             </p>
-          </div>
-          <p class="db-copyright">
-            &copy; {{ "now" | date: "%Y" }} Deadbeat - All rights reserved
-          </p>
-        </div>
-        <div class="db-col">
-
-          {% if linklists.footer.links.size > 0 %}
-
-            <ul class="db-menu-list">
-
-              {% for menuItem in linklists.footer.links %}
-
-                <li class="db-menu-item">
-                  <a class="db-menu-link"
-                    title="{{ menuItem.title }}"
-                    href="{{ menuItem.url }}">
-                    {{ menuItem.title }}
-                  </a>
-                </li>
-
-              {% endfor %}
-
+            <ul class="db-contact-list">
+              <li class="db-contact-item">
+                <a class="db-contact-link"
+                  title="Contact Email"
+                  href="mailto:example@deadbeat2069.com">
+                  <span class="db-contact-label">EMAIL</span>
+                  <span class="db-contact-value">example@deadbeat2069.com</span>
+                </a>
+              </li>
+              <li class="db-contact-item">
+                <a class="db-contact-link"
+                  title="Contact Number"
+                  href="tel:44(0)2030020224">
+                  <span class="db-contact-label">CALL</span>
+                  <span class="db-contact-value">+44 (0)20 30020224</span>
+                </a>
+              </li>
             </ul>
-
-          {% endif %}
-          
-        </div>
-        <div class="db-col">
-          <h5>
-            SOCIALS
-          </h5>
-          {% render 'socials' %}
+          </div>
+          <div class="db-col">
+            <img class="db-img-figure01 db-img"
+              alt=""
+              title=""
+              src="{{ 'DB_Footer_NewsletterFigure01_v01-809x512.png' | asset_url }}"
+              width=""
+              height=""
+              loading="lazy">
+          </div>
         </div>
       </div>
-      <p class="db-copyright">
-        &copy; {{ "now" | date: "%Y" }} Deadbeat - All rights reserved
-      </p>
-    </div>
-  </section>
-</footer>
-<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-<script type="text/javascript">
-  (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);
-</script>
+    </section>
+    <section class="db-section db-section--primary">
+      <div class="db-container">
+        <div class="db-row">
+          <div class="db-col">
+            <div class="db-inner-row">
+              <a class="db-elevate-link"
+                title=""
+                href="">
+                <img class="db-elevate-logo db-img"
+                  alt=""
+                  title=""
+                  src="{{ 'DB_Elevate_logo-v01-72x81.png' | asset_url }}"
+                  width=""
+                  height=""
+                  loading="lazy">
+              </a>
+              <p>
+                We are a Web3 brand focused on creating the story world and building the story canon with us… ON AIR!.
+              </p>
+            </div>
+            <p class="db-copyright">
+              &copy; {{ "now" | date: "%Y" }} Deadbeat - All rights reserved
+            </p>
+          </div>
+          <div class="db-col">
+
+            {% if linklists.footer.links.size > 0 %}
+
+              <ul class="db-menu-list">
+
+                {% for menuItem in linklists.footer.links %}
+
+                  <li class="db-menu-item">
+                    <a class="db-menu-link"
+                      title="{{ menuItem.title }}"
+                      href="{{ menuItem.url }}">
+                      {{ menuItem.title }}
+                    </a>
+                  </li>
+
+                {% endfor %}
+
+              </ul>
+
+            {% endif %}
+            
+          </div>
+          <div class="db-col">
+            <h5>
+              SOCIALS
+            </h5>
+            {% render 'socials' %}
+          </div>
+        </div>
+        <p class="db-copyright">
+          &copy; {{ "now" | date: "%Y" }} Deadbeat - All rights reserved
+        </p>
+      </div>
+    </section>
+  </footer>
+
+{% endif %}
