--- a/styles/db-theme/_reset.scss
+++ b/styles/db-theme/_reset.scss
@@ -31,7 +31,7 @@ body {
   font-size: 14px;
   line-height: 1em;
   // background-color: transparent;
-  background-color: #0E0914;
+  background-color: #150E1F;
   min-width: 380px;
   width: 100%;
   overflow-x: hidden;
