--- a/styles/db-theme/_page--about-us.scss
+++ b/styles/db-theme/_page--about-us.scss
@@ -469,7 +469,7 @@
     background-size: cover;
     position: relative;
     height: 1900px;
-    padding-bottom: 0px;
+    padding: 0 20px;
     // height: 1816px;
 
     @media only screen and (max-width: 768px) {
