--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100vh;
     padding: 0 20px;
+    overflow: hidden;
 
     @media only screen and (max-width: 1080px) {
       height: auto;
