--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -235,7 +235,7 @@
               No Character Found Yet.
             </div>
           </div>
-          <div class="db-buttons-slider" v-if="appearButton">
+          <div class="db-buttons-slider">
             <div class="buttons" ref="buttons">
               <svg class="svg-icon-prev db-svg"
                 id="left"
@@ -272,6 +272,7 @@
     </div>
   </section>
 
+  
   <section class="db-section db-section--about-us-mb-slider"
     v-if="isMobile">
     <div class="db-container">
@@ -558,6 +559,7 @@
     </div>
   </section>
 
+  <section class="db-section db-section--spacer"></section>
   <section class="db-section db-section--about-us-resurrection">
     <div class="db-container">
       <div class="db-row">
